--- a/app/src/main/res/layout/activity_news_list_item.xml
+++ b/app/src/main/res/layout/activity_news_list_item.xml
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:orientation="vertical">
 
     <TextView
+        android:textSize="16sp"
         android:id="@+id/news_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="12dp"
+        android:textColor="#333333"
+        tools:text="西南科技大学计算机科学与技术学院在绵阳市中心医院进行教学科研座谈会"/>
+
+    <TextView
+        android:textSize="15sp"
+        android:id="@+id/news_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="12dp"
+        android:textColor="#777777"
+        tools:text="2017-04-26"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="7dp"
+        android:background="#dddddd"/>
 </LinearLayout>
