--- a/app/src/main/res/layout/activity_news_page.xml
+++ b/app/src/main/res/layout/activity_news_page.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ren.yueh.perchdemo.NewsPageActivity">
+    tools:context="ren.yueh.perchdemo.swustsc.NewsPageActivity">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe"
