--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context="ren.yueh.perchdemo.MainActivity">
+              tools:context="ren.yueh.perchdemo.swustsc.SWUSTSCNewsActivity">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
