--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -9,5 +9,5 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ren.yueh.perchdemo.WelcomeActivity">
+    tools:context="ren.yueh.perchdemo.main.WelcomeActivity">
 </RelativeLayout>
